--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
 }
 
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .header {
   width: 100%;
   height: 125px;
@@ -20,4 +26,17 @@ body {
   margin: 15px;
   border-radius: 15px;
   background-color: aquamarine;
+}
+
+.modal-backdrop {
+  width: 70%;
+  height: 300px;
+  background-color: black;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
 }
