--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import-normalize;
 
 body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: italic;
   margin: 0;
 }
 
@@ -14,14 +17,21 @@ body {
   width: 100%;
   height: 125px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   margin: 0;
   background: linear-gradient(to right, #ff7e5f, #feb47b)
 }
 
+.buttons {
+  width: 30%;
+}
+
 .nav-button {
-  width: 15%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+  width: 40%;
   height: 50px;
   margin: 15px;
   border-radius: 15px;
@@ -31,7 +41,9 @@ body {
 .modal-backdrop {
   width: 70%;
   height: 300px;
-  background-color: black;
+  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  border-radius: 15px;
+  margin-top: 25px;
 }
 
 .modal-content {
@@ -39,4 +51,20 @@ body {
   flex-direction: column;
   align-items: center;
   color: white;
+}
+
+.close-modal-button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+  width: 15%;
+  height: 50px;
+  background-color: aquamarine;
+  border-radius: 15px;
+}
+
+.title {
+  margin-left: 15px;
+  font-style: italic;
+  color: rgb(225, 238, 248);
 }
