--- a/src/index.css
+++ b/src/index.css
@@ -25,18 +25,20 @@ body {
 }
 
 .buttons {
+  display: flex;
+  justify-content: flex-end;
   width: 30%;
 }
 
 .nav-button {
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-style: italic;
   width: 40%;
-  height: 50px;
+  height: 50px; */
   margin: 15px;
-  border-radius: 15px;
-  background-color: aquamarine;
+  /* border-radius: 15px;
+  background-color: aquamarine; */
 }
 
 .modal-backdrop {
