--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
 .buttons {
   display: flex;
   justify-content: flex-end;
+  margin-right: 100px;
   width: 30%;
 }
 
@@ -59,8 +60,24 @@ body {
   flex-direction: column;
   align-items: center;
   width: 70%; 
-  max-width: 600px; 
-  height: 400px; 
+  max-width: 800px; 
+  height: 50vh; 
+  overflow: auto;
+  background: linear-gradient(to right, #ff7e5f, #feb47b); 
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000; 
+}
+
+.modal-resume-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%; 
+  max-width: 1000px; 
+  height: 70vh; 
+  overflow: auto;
   background: linear-gradient(to right, #ff7e5f, #feb47b); 
   border-radius: 15px;
   padding: 20px;
@@ -72,21 +89,25 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-style: italic;
-  width: 15%;
-  height: 50px;
+  min-width: 125px;
+  min-height: 50px;
+  margin-top: 25px;
   background-color: aquamarine;
   border-radius: 15px;
 }
 
 .title {
-  margin-left: 25px;
+  margin-left: 100px;
   font-style: italic;
-  color: rgb(225, 238, 248);
+  color: rgb(101, 26, 6);
+  text-shadow: 3px 3px 5px rgba(10, 49, 66, 0.5); 
 }
 
 .photo {
-  width: 20%;
-  height: 10%;
+  max-width: 350px; 
+  max-height: 200px; 
+  width: auto;
+  height: auto;
   margin-left: 50px;
 }
 
@@ -98,12 +119,31 @@ body {
 }
 
 .main {
-  margin-top: 20px;
+  padding-top: 40px;
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: space-evenly;
+  align-items: flex-start;
+  background: linear-gradient(to right, #f3d8d1, #f3f1f0);
 }
 
 .job-title {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-paragraph {
+  text-indent: 30px;
+}
+
+.landing-paragraph {
+  width: 45%;
   text-align: center;
+}
+
+.links-to-external {
+  display: flex;
 }
